--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -39,7 +39,7 @@
 										</div>
 									</p:link>
 								</div>
-								<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'GERENTE DE TI'])}">
+								<div class="col-md-4 col-sm-6 col-xs-12">
 									<p:link href="#" onclick="abrirRecursosHumanos()">
 										<div class="info-box" style="background-color: #f8f8f8;">
 											<span class="info-box-icon bg-aqua"><i
@@ -121,8 +121,8 @@
 								<h3 class="box-title pull-right"><i class="fa fa-users pull-right"></i></h3>
 							</div>
 							<div class="box-body">
-								<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'GERENTE DE TI']) or usuario.usuario eq 'LacerdaT' or usuario.usuario eq 'EsbonikA' or usuario.usuario eq 'JacomassiK'}">
-									<p:link href="/pages/recursosHumanos/welcome.xhtml">
+								<div class="col-md-4 col-sm-6 col-xs-12" >
+									<p:link href="/pages/recursosHumanos/holerite/autenticar_holerite.xhtml">
 										<div class="info-box" style="background-color: #f8f8f8;">
 											<span class="info-box-icon bg-aqua"><i
 												class="fa fa-envelope"></i></span>
@@ -135,7 +135,7 @@
 										</div>
 									</p:link>
 								</div>
-								<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'GERENTE DE TI']) or usuario.usuario eq 'LacerdaT' or usuario.usuario eq 'EsbonikA' or usuario.usuario eq 'JacomassiK'}">
+								<div class="col-md-4 col-sm-6 col-xs-12">
 									<p:link href="#" disabled="true">
 										<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 											<span class="info-box-icon bg-aqua"><i
@@ -149,7 +149,7 @@
 										</div>
 									</p:link>
 								</div>
-								<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'GERENTE DE TI']) or usuario.usuario eq 'LacerdaT' or usuario.usuario eq 'EsbonikA' or usuario.usuario eq 'JacomassiK'}">
+								<div class="col-md-4 col-sm-6 col-xs-12">
 									<p:link href="#" disabled="true">
 										<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 											<span class="info-box-icon bg-aqua"><i
