--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
@@ -88,22 +88,32 @@
 											<label for="situacao">Situação: </label>
 										</div>
 	
-										<div class="col-sm-3 col-md-3">
+										<div class="col-sm-9 col-md-9">
 											<p:outputLabel id="situacao" value="#{minhaSolicitacaoCompraController.solicitacaoCompra.situacao.descricao.toUpperCase()}" styleClass="control-label font-normal" />
 										</div>
-										
-										<p:outputPanel rendered="#{minhaSolicitacaoCompraController.solicitacaoCompra.dtAprovacao != null}">
+									</div>
+									<div class="form-group">
+										<div class="col-sm-3 col-md-3 control-label">
+											<label for="aprovador">Aprovador: </label>
+										</div>
+	
+										<div class="col-sm-9 col-md-9">
+											<p:outputLabel id="aprovador" value="#{minhaSolicitacaoCompraController.obterNomeAprovador(minhaSolicitacaoCompraController.solicitacaoCompra.usuarioAprovacaoFluig).toUpperCase()}" styleClass="control-label font-normal" />
+										</div>
+									</div>
+									<p:outputPanel rendered="#{minhaSolicitacaoCompraController.solicitacaoCompra.dtAprovacao != null}">
+										<div class="form-group">
 											<div class="col-sm-3 col-md-3 control-label">
 												<label for="dtAprovacao">Data de Aprovação: </label>
 											</div>
 		
-											<div class="col-sm-3 col-md-3">
+											<div class="col-sm-9 col-md-9">
 	           									<p:outputLabel id="dtAprovacao" value="#{minhaSolicitacaoCompraController.solicitacaoCompra.dtAprovacao}" styleClass="control-label font-normal">
 													<f:convertDateTime pattern="dd/MM/yyyy"/>
 												</p:outputLabel>
 											</div>
-										</p:outputPanel>
-									</div>
+										</div>
+									</p:outputPanel>
 									<div class="form-group">
 										<div class="col-sm-3 col-md-3 control-label">
 											<label for="centroCusto">Centro de Custo: </label>
