--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
@@ -21,6 +21,14 @@
 			<div class="page-content-central ui-fluid">
 				<h:form id="solicitacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 					<f:validateBean disabled="true" for="@form">
+						<div class="tabbable">
+  							<ul class="nav nav-tabs wizard">
+							    <li class="#{minhaSolicitacaoCompraController.obterClassStep(minhaSolicitacaoCompraController.solicitacaoCompra.situacao, 1)}"><a aria-expanded="false"><span class="nmbr"><i class="fa fa-gavel"></i></span> Aguardando Aprovação</a></li>
+							    <li class="#{minhaSolicitacaoCompraController.obterClassStep(minhaSolicitacaoCompraController.solicitacaoCompra.situacao, 2)}"><a aria-expanded="false"><span class="nmbr"><i class="fa fa-pencil"></i></span> Em Cotação</a></li>
+							    <li class="#{minhaSolicitacaoCompraController.obterClassStep(minhaSolicitacaoCompraController.solicitacaoCompra.situacao, 3)}"><a aria-expanded="false"><span class="nmbr"><i class="fa fa-thumbs-up"></i></span> Aguardando Liberação</a></li>
+							    <li class="#{minhaSolicitacaoCompraController.obterClassStep(minhaSolicitacaoCompraController.solicitacaoCompra.situacao, 4)}"><a aria-expanded="true"><span class="nmbr"><i class="fa fa-check"></i></span> Gerar Ordem de Compra</a></li>
+  							</ul>
+  						</div>
 						<p:panel toggleable="false" id="painelCadastro" styleClass="box box-danger">
 							<div class="box-header with-border">
 		             			<h3 class="box-title">Solicitação de Compra</h3>
