--- a/portaljcr/WebContent/pages/suporte/listar_relatorioChamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/listar_relatorioChamado.xhtml
@@ -25,7 +25,7 @@
 			<div class="page-content-central ui-fluid">
 				<h:form id="chamadoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 					<f:validateBean disabled="true" for="@form">
-						<div class="row" jsf:rendered="#{relatorioChamadoController.exibirResultado}">
+						<div class="row">
 							<!-- ./col -->
 							<div class="col-lg-3 col-xs-6">
 								<!-- small box -->
