ajuste de ponto

--- a/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/autenticar_ajustarPonto.xhtml
+++ b/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/autenticar_ajustarPonto.xhtml
@@ -12,6 +12,9 @@
 		<ui:param name="activeSubmenu" value="holerite"/>
     	<ui:param name="activeMenu" value="rh"/>
     	
+    	<f:metadata>
+			<f:viewAction action="#{ajustePontoController.autenticarUsuario()}" />
+		</f:metadata>
     	<ui:define name="pageTitle"><i class="fa fa-envelope fa-1x cor-padrao"></i> Ajustar Ponto</ui:define>
     	<ui:define name="breadcrumb">
 			<li><i class="fa fa-users"></i> Recursos Humanos</li>
