--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
@@ -227,7 +227,7 @@
 									</div>
 
 									<div class="col-sm-2 col-md-2">
-								        <h:inputText id="qtd" maxlength="9" styleClass="form-control" value="#{solicitacaoCompraController.solicitacaoCompraDTO.produto.quantidade}" onkeyup="filterNumberOnly(this);" />
+								        <p:inputNumber id="qtd" value="#{solicitacaoCompraController.solicitacaoCompraDTO.produto.quantidade}" decimalPlaces="2" maxValue="999999" thousandSeparator="." decimalSeparator="," maxlength="9" />
 									</div>
 									<div class="col-sm-7 col-md-7" style="display:none;">
 										<span class="users-list-date pull-right">
