--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -20,6 +20,9 @@
         			<div class="welcomePrincipal" style="display: none;">
 						<div id="painelPrincipal" class="box box-danger">
 							<div class="box-body">
+<!-- 								 <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default"> -->
+<!-- 					                Launch Default Modal -->
+<!-- 					              </button> -->
 								<div class="box-header">
 									<h3 class="box-title">
 										<i class="fa fa-th"></i> Acesso Rápido
