--- a/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
@@ -78,7 +78,7 @@
 										</div>
 	
 										<div class="col-sm-9 col-md-9">
-											<h:inputText id="titulo" styleClass="form-control" value="#{chamadoController.chamadoDTO.titulo}" />
+											<h:inputText id="titulo" styleClass="form-control" value="#{chamadoController.chamadoDTO.titulo}" maxlength="100" />
 										</div>
 									</div>
 									<div class="form-group">
