--- a/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/autenticar_ajustarPonto.xhtml
+++ b/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/autenticar_ajustarPonto.xhtml
@@ -9,74 +9,20 @@
 	xmlns:jsf="http://xmlns.jcp.org/jsf" >
 	
 	<ui:composition template="/pages/templates/layout.xhtml">
-		<ui:param name="activeSubmenu" value="holerite"/>
+		<ui:param name="activeSubmenu" value="ajustePonto"/>
     	<ui:param name="activeMenu" value="rh"/>
     	
     	<f:metadata>
 			<f:viewAction action="#{ajustePontoController.autenticarUsuario()}" />
 		</f:metadata>
-    	<ui:define name="pageTitle"><i class="fa fa-envelope fa-1x cor-padrao"></i> Ajustar Ponto</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-pencil-square-o fa-1x cor-padrao"></i> Ajustar Ponto</ui:define>
     	<ui:define name="breadcrumb">
 			<li><i class="fa fa-users"></i> Recursos Humanos</li>
-	    	<li class="active"><i class="fa fa-envelope"></i> Ajustar Ponto</li>
+	    	<li class="active"><i class="fa fa-pencil-square-o"></i> Ajustar Ponto</li>
 		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
-				<h:form id="solicitacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
-					<f:validateBean disabled="true" for="@form">
-						<p class="text-muted well well-sm no-shadow"><i class="fa fa-info-circle"></i> Para consultar os seus holerites, você deve se autenticar com usuário e senha do <strong>Portal RH</strong>.</p>
-						<p:panel toggleable="false" id="painelAutenticacao" styleClass="box box-info">
-							<div class="box-header" style="text-align:center;">
-								<div style="text-align: center;">
-									<img  src="../../../resources/images/totvs_logo.png" alt="TOTVS RM" height="80" width="80" />
-								</div>
-								<br />
-		             			<h3 class="box-title ui-widget">Autenticação Portal RH</h3>
-		            		</div>
-							<div class="form-horizontal">
-								<div class="box-body">
-									<div class="form-group">
-										<div class="col-sm-5 col-md-5 col-xs-12 control-label">
-											<label for="chapa">Chapa: </label>
-										</div>
-	
-										<div class="col-sm-6 col-md-2 col-xs-12">
-											<h:inputText id="chapa" value="#{ajustarPontoController.chapa}" maxlength="10" styleClass="form-control" />
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="col-sm-5 col-md-5 col-xs-12 control-label">
-											<label for="chave">Senha: </label>
-										</div>
-	
-										<div class="col-sm-6 col-md-2 col-xs-12">
-											<h:inputSecret id="chave" value="#{ajustarPontoController.chave}" maxlength="50" styleClass="form-control" />
-<!-- 											<div class="col-sm-12 col-md-12 col-xs-12">  -->
-<!-- 												<div class="text-center"> -->
-<!-- 													<p:link styleClass="text-center" style="font-size:12px !important; color: #3c8dbc;">Esqueceu sua senha?</p:link> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="box-footer">
-								<div class="col-sm-0 col-md-4"></div>
-								<div class="col-sm-4 col-md-4">
-									<p:commandButton
-										styleClass="btn-azul"
-										icon="fa fa-sign-in"
-										value="Autenticar"
-										id="btn_autenticar"
-										action="#{ajustarPontoController.autenticarUsuario()}"
-										process="@form"
-										update="@form"
-										ajax="true" />
-								</div>
-								<div class="col-sm-0 col-md-4"></div>
-							</div>
-						</p:panel>
-					</f:validateBean>
+				<h:form id="ajustarPontoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 				</h:form>
 			</div>
 		</ui:define>
