--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
@@ -140,7 +140,7 @@
 						</p:column>
 
 						<p:column headerText="Cancelar" style="text-align: center;font-size:12px;" width="5%">
-							<p:commandLink ajax="true" process="@this" action="#{minhaSolicitacaoCompraController.iniciarCancelamento()}" rendered="#{solicitacao.situacao eq 'AGUARDANDO_APRV' or solicitacao.situacao eq 'APROVADA_COTACAO' or solicitacao.situacao eq 'EM_COTACAO'}" >
+							<p:commandLink ajax="true" process="@this" action="#{minhaSolicitacaoCompraController.iniciarCancelamento()}" rendered="#{solicitacao.situacao ne 'FINALIZADA' or solicitacao.situacao ne 'CANCELADA'}" >
 								<h:outputText value="" title="Cancelar" styleClass="fa fa-times" />
 								<f:setPropertyActionListener value="#{solicitacao}" target="#{minhaSolicitacaoCompraController.solicitacaoCompra}" />
 							</p:commandLink>
