--- a/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/editar_ajustarPonto.xhtml
+++ b/portaljcr/WebContent/pages/recursosHumanos/ajustarPonto/editar_ajustarPonto.xhtml
@@ -22,6 +22,14 @@
 			<div class="page-content-central ui-fluid">
 				<h:form id="ajustarPontoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 					<f:validateBean disabled="true" for="@form">
+						<p:panel toggleable="false" id="painelSolucao" styleClass="box box-warning" rendered="#{ajustePontoController.ajustePonto != null and ajustePontoController.ajustePonto.motivoRecusa != null}">
+							<div class="box-header with-border">
+		             			<h3 class="box-title">Correção: </h3>
+		            		</div>
+		            		<div class="box-body">
+		            			<h:inputTextarea id="solucaoChamado" value="#{ajustePontoController.ajustePonto.motivoRecusa.toUpperCase()}" styleClass="form-control" rows="3" readonly="true" style="background-color: #FFF;"/>
+		            		</div>
+						</p:panel>
 						<p:panel toggleable="false" id="painelConsulta" styleClass="box box-danger">
 							<div class="box-header with-border">
 		             			<h3 class="box-title">Cartão de Ponto</h3>
@@ -273,9 +281,10 @@
 										value="Enviar para Aprovação"
 										id="btn_enviar_aprovacao"
 										process="@form"
+										global="true"
 										action="#{ajustePontoController.enviarCorrecaoAprovacao()}"
-										update="@this, @form"
-										
+										update="@form"
+										oncomplete="javascript:window.scrollTo(0,0);"
 										ajax="true">
 									</p:commandButton>
 									<p:outputPanel rendered="#{!ajustePontoController.verificarEnvioAprovacao()}">
@@ -315,7 +324,7 @@
 											<label>Justificativa:</label>
 										</div>
 										<div class="col-sm-12 col-md-12">
-											<h:inputTextarea id="justificativa" value="#{ajustePontoController.justificativa}" styleClass="form-control" rows="5" />
+											<h:inputText id="justificativa" value="#{ajustePontoController.justificativa}" styleClass="form-control" maxlength="1000" />
 										</div>
 									</div>
 								</div>
@@ -367,7 +376,7 @@
 											<label>Justificativa:</label>
 										</div>
 										<div class="col-sm-12 col-md-12">
-											<h:inputTextarea id="justificativaEdicao" value="#{ajustePontoController.justificativa}" styleClass="form-control" rows="5" />
+											<h:inputText id="justificativaEdicao" value="#{ajustePontoController.justificativa}" styleClass="form-control" maxlength="1000" />
 										</div>
 									</div>
 								</div>
@@ -378,7 +387,7 @@
 											icon="fa fa-save"
 											value="Salvar"
 											id="btn_salvar_edicao"
-											process="@this, @form:modalBatida"
+											process="@this, @form:modalBatidaEdicao"
 											global="false"
 											action="#{ajustePontoController.salvarBatida()}"
 											update="@form:mensagemModalEdicao"
@@ -391,7 +400,7 @@
 											icon="fa fa-times"
 											value="Excluir"
 											id="btn_excluir"
-											process="@this, @form:modalBatida"
+											process="@this, @form:modalBatidaEdicao"
 											global="false"
 											action="#{ajustePontoController.excluirBatida()}"
 											update="@form:mensagemModalEdicao"
